--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,11 @@
 
 .check-out-btn{
   display: none;
-
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  margin: auto 20px;
 }
 .service-card:hover .service-details,
 .service-card:hover .check-out-btn
